--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
             android:label="@string/title_activity_file_training" >
         </activity>
         <activity
-            android:name=".PicListAcivity"
+            android:name=".PicListActivity"
             android:label="@string/title_activity_pic_list_acivity" >
         </activity>
         <activity
