--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,12 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.3.jar')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
+    compile files('libs/butterknife-6.1.0.jar')
+
+
+
 }
+
+
+
+
