--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PicListActivity"
+            android:name=".PicContentListActivity"
             android:label="@string/title_activity_list" >
         </activity>
         <activity
