--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:allowBackup="true"
         android:icon="@drawable/greenicon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme1" >
+        android:theme="@style/AppTheme1"
+        android:name="com.activeandroid.app.Application"
+        >
+        <meta-data android:name="AA_DB_NAME" android:value="Local1000.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="5" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
