--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/copyright/profiles_settings.xml
+/.idea/vcs.xml
 .DS_Store
 /build
 *.iml
