--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jianming.myapplication" >
+    package="com.example.jianming.myapplication">
 
     <!-- <uses-permission android:name="android.permission.INTERNET" /> -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -22,7 +21,7 @@
         android:allowBackup="true"
         android:icon="@drawable/greenicon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme1" >
+        android:theme="@style/AppTheme1">
         <meta-data
             android:name="AA_DB_NAME"
             android:value="Local1000.db" />
@@ -32,40 +31,32 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".PicAlbumActivity"
-            android:label="@string/title_activity_list" >
-        </activity>
+            android:label="@string/title_activity_list"></activity>
         <activity
             android:name=".PicContentActivity"
             android:label="@string/title_activity_xrx"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
-        </activity>
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"></activity>
         <activity
             android:name=".FileTrainingActivity"
-            android:label="@string/title_activity_file_training" >
-        </activity>
+            android:label="@string/title_activity_file_training"></activity>
         <activity
             android:name=".PicAlbumListActivity"
-            android:label="@string/title_activity_pic_list_acivity" >
-        </activity>
+            android:label="@string/title_activity_pic_list_acivity"></activity>
         <activity
             android:name=".SettingActivity"
-            android:label="@string/title_activity_setting" >
-        </activity>
-        <activity android:name=".AboutActivity" >
-        </activity>
+            android:label="@string/title_activity_setting"></activity>
+        <activity android:name=".AboutActivity"></activity>
         <activity
             android:name=".TimestampActivity"
             android:label="@string/title_activity_timestamp"
-            android:theme="@style/AppTheme1" >
-        </activity>
+            android:theme="@style/AppTheme1"></activity>
         <activity
             android:name=".Main2Activity"
             android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme1" >
+            android:theme="@style/AppTheme1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -76,14 +67,17 @@
             android:name="com.example.jianming.xzingdemo.CapActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
-        </activity>
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
 
         <service
             android:name="com.example.jianming.services.DownloadService"
             android:enabled="true"
-            android:exported="true" >
-        </service>
+            android:exported="true"></service>
+
+        <activity
+            android:name=".PicAlbumListActivityMD"
+            android:label="@string/title_activity_pic_album_list_activity_md"
+            android:theme="@style/AppTheme1"></activity>
     </application>
 
 </manifest>
