--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:allowBackup="true"
         android:icon="@drawable/greenicon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme1">
+        android:theme="@style/AppTheme.NoActionBar">
         <meta-data
             android:name="AA_DB_NAME"
             android:value="Local1000.db" />
@@ -31,29 +31,29 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".PicAlbumActivity"
-            android:label="@string/title_activity_list"></activity>
+            android:label="@string/title_activity_list" />
         <activity
             android:name=".PicContentActivity"
             android:label="@string/title_activity_xrx"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"></activity>
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" />
         <activity
             android:name=".FileTrainingActivity"
-            android:label="@string/title_activity_file_training"></activity>
+            android:label="@string/title_activity_file_training" />
         <activity
             android:name=".SettingActivity"
-            android:label="@string/title_activity_setting"></activity>
-        <activity android:name=".AboutActivity"></activity>
+            android:label="@string/title_activity_setting" />
+        <activity android:name=".AboutActivity" />
         <activity
             android:name=".TimestampActivity"
             android:label="@string/title_activity_timestamp"
-            android:theme="@style/AppTheme1"></activity>
+            android:theme="@style/AppTheme1" />
         <activity
             android:name=".Main2Activity"
             android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme1">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -64,17 +64,18 @@
             android:name="com.example.jianming.xzingdemo.CapActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
 
         <service
             android:name="com.example.jianming.services.DownloadService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".PicAlbumListActivityMD"
             android:label="@string/title_activity_pic_album_list_activity_md"
-            android:theme="@style/AppTheme1"></activity>
+            android:theme="@style/AppTheme1" />
+
     </application>
 
 </manifest>
