--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:label="@string/title_activity_xrx"
             android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" />
         <activity
-            android:name=".FileTrainingActivity"
+            android:name=".Local1KActivity"
             android:label="@string/title_activity_file_training" />
         <activity
             android:name=".SettingActivity"
