--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    android {
+        packagingOptions {
+            exclude 'META-INF/DEPENDENCIES'
+            exclude 'META-INF/NOTICE'
+            exclude 'META-INF/LICENSE'
+            exclude 'META-INF/LICENSE.txt'
+            exclude 'META-INF/NOTICE.txt'
+        }
+    }
 }
 
 dependencies {
@@ -33,7 +43,9 @@ dependencies {
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:design:23.1.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.0'
     compile project(':zxingLib-release')
+    compile project(':processerlib-release')
 }
 
 
