--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,6 @@
             android:value="com.example.jianming.beans.PicAlbumBean, com.example.jianming.beans.PicInfoBean, com.example.jianming.beans.UpdateStamp" />
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" />
-        <activity
             android:name=".PicAlbumActivity"
             android:label="@string/title_activity_list" />
         <activity
@@ -71,6 +68,11 @@
 
         <service
             android:name="com.example.jianming.services.DownloadService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <service
+            android:name="org.nanjing.knightingal.processerlib.Services.DownloadService"
             android:enabled="true"
             android:exported="true" />
 
