--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.0'
     compile project(':zxingLib-release')
-    compile project(':processerlib-release')
+    compile project(':processerlib-debug')
 }
 
 
