--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.0'
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile project(':zxingLib-release')
     compile project(':processerlib-debug')
 }
