--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,10 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.0'
-    compile group: 'commons-io', name: 'commons-io', version: '2.4'
+    compile 'commons-io:commons-io:2.4'
     compile project(':zxingLib-release')
     compile project(':processerlib-debug')
+    compile project(':kimageslider-release')
 }
 
 
