--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':zxingLib-release', ':processerlib-debug'
+include ':app', ':zxingLib-release', ':processerlib-debug', ':kimageslider-release'
