--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         applicationId "com.example.jianming.myapplication"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.0'
     compile 'commons-io:commons-io:2.4'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile project(':zxingLib-release')
     compile project(':processerlib-debug')
     compile project(':kimageslider-release')
