--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
 
+    <!--android:name="com.activeandroid.app.Application"-->
     <application
-        android:name="com.activeandroid.app.Application"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/greenicon"
         android:label="@string/app_name"
