--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     implementation 'com.android.support:design:26.1.0'
     implementation 'org.greenrobot:greendao:3.2.2'
@@ -41,6 +40,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':kimageslider-release')
     implementation project(':processerlib-debug')
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.12.0'
 }
 
 
