--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
 
+    <!--android:roundIcon="@mipmap/ic_launcher_round"-->
     <!--android:name="com.activeandroid.app.Application"-->
     <application
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/greenicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light">
         <activity
