--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /.idea/.name
 /.idea/modules.xml
 /.idea/dbnavigator.xml
+/.idea/jarRepositories.xml
+/.idea/caches
+/.idea/codeStyles/Project.xml
 .DS_Store
-/build
+*/build
 *.iml
