--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jianming.myapplication">
-
     <!-- <uses-permission android:name="android.permission.INTERNET" /> -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!-- Include next permission if you want to allow UIL to cache images on SD card -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Include next permission if you want to allow UIL to cache images on SD card -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,8 +14,6 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
 
-    <!--android:roundIcon="@mipmap/ic_launcher_round"-->
-    <!--android:name="com.activeandroid.app.Application"-->
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -57,7 +53,7 @@
             android:exported="true"/>
 
         <activity
-            android:name=".PicAlbumListActivityMD"
+            android:name=".PicAlbumListActivity"
             android:label="@string/title_activity_pic_album_list_activity_md" />
 
     </application>
