--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:icon="@mipmap/greenicon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Material3.DayNight.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".PicAlbumActivity"
             android:label="@string/title_activity_list" />
