--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".PicAlbumActivity"
+            android:name=".AlbumContentActivity"
             android:label="@string/title_activity_list" />
         <activity
             android:name=".PicContentActivity"
