--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.example.jianming.services.KtDownloadService"
+        <service android:name="com.example.jianming.services.DownloadService"
             android:enabled="true"
             android:exported="true"/>
 
