--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -16,11 +16,16 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SectionImageListActivity"
             android:label="@string/title_activity_list" />
@@ -34,14 +39,11 @@
         <activity
             android:name=".AboutActivity"
             android:exported="true"
-            android:label="@string/title_activity_setting" >
-        </activity>
+            android:label="@string/title_activity_setting"></activity>
         <activity
             android:name=".Main2Activity"
-            android:label="@string/title_activity_main2"
             android:exported="true"
-            >
-
+            android:label="@string/title_activity_main2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,28 +51,24 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.example.jianming.services.DownloadService"
+        <service
+            android:name="com.example.jianming.services.DownloadService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <activity
             android:name=".PicSectionListActivity"
             android:label="@string/title_activity_pic_section_list_activity_md" />
-        
 
         <provider
-                android:name="androidx.core.content.FileProvider"
-                android:authorities="com.example.flow1000client.file_provider"
-                android:grantUriPermissions="true"
-                android:exported="false">
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.flow1000client.file_provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/file_paths" />
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
         </provider>
-
-
-
-
     </application>
 
 </manifest>
