remove flutter component

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,23 +54,23 @@
         <activity
             android:name=".PicSectionListActivity"
             android:label="@string/title_activity_pic_section_list_activity_md" />
-        <activity
-            android:name="io.flutter.embedding.android.FlutterActivity"
-            android:theme="@style/AppTheme"
-            android:exported="true"
-            android:icon="@drawable/delete"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize"
-            >
+<!--        <activity-->
+<!--            android:name="io.flutter.embedding.android.FlutterActivity"-->
+<!--            android:theme="@style/AppTheme"-->
+<!--            android:exported="true"-->
+<!--            android:icon="@drawable/delete"-->
+<!--            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"-->
+<!--            android:hardwareAccelerated="true"-->
+<!--            android:windowSoftInputMode="adjustResize"-->
+<!--            >-->
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
 
-        </activity>
+<!--        </activity>-->
 
         <provider
             android:name="androidx.core.content.FileProvider"
