--- a/flutter_module/pubspec.yaml
+++ b/flutter_module/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.2
   path: ^1.9.1
+  go_router: ^15.2.4
 
 dev_dependencies:
   flutter_test:
