--- a/flutter_module/pubspec.yaml
+++ b/flutter_module/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   go_router: ^15.2.4
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
