--- a/flutter_module/pubspec.yaml
+++ b/flutter_module/pubspec.yaml
@@ -30,8 +30,9 @@ dependencies:
   http: ^1.3.0
   sqflite: ^2.4.2
   path: ^1.9.1
-  go_router: ^15.2.4
   path_provider: ^2.1.5
+  blur: ^4.0.2
+  go_router: ^16.0.0
 
 dev_dependencies:
   flutter_test:
