--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:label="@string/title_activity_setting"></activity>
 
         <service
-            android:name="com.example.jianming.services.DownloadService"
+            android:name="org.knightingal.flow1000.client.services.DownloadService"
             android:enabled="true"
             android:exported="true" />
 
