--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,87 +14,77 @@
     <uses-permission android:name="android.permission.FLASHLIGHT" />
 
     <application
-        android:name=".App"
-        android:allowBackup="true"
-        android:icon="@drawable/app_icon"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity
-            android:name=".MainActivity"
+            android:name=".myapplication.App"
+            android:allowBackup="true"
             android:icon="@drawable/app_icon"
-            android:exported="true"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
             android:theme="@style/AppTheme"
-             >
-
+            android:usesCleartextTraffic="true">
+        <activity
+                android:name=".myapplication.MainActivity"
+                android:exported="true"
+                android:icon="@drawable/app_icon"
+                android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".SectionImageListActivity"
-            android:label="@string/title_activity_list" />
+                android:name=".myapplication.SectionImageListActivity"
+                android:label="@string/title_activity_list"/>
         <activity
-            android:name=".PicContentActivity"
-            android:label="@string/title_activity_xrx"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" />
+                android:name=".myapplication.PicContentActivity"
+                android:label="@string/title_activity_xrx"
+                android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"/>
         <activity
-            android:name=".AboutActivity"
-            android:exported="true"
-            android:label="@string/title_activity_setting"></activity>
+                android:name=".myapplication.AboutActivity"
+                android:exported="true"
+                android:label="@string/title_activity_setting"/>
 
         <service
-            android:name="org.knightingal.flow1000.client.services.DownloadService"
-            android:enabled="true"
-            android:exported="true" />
+                android:name=".services.DownloadService"
+                android:enabled="true"
+                android:exported="true"/>
 
         <activity
-            android:name=".PicSectionListActivity"
-            android:label="@string/title_activity_pic_section_list_activity_md" />
-
-<!--        <activity-->
-<!--                android:name="com.example.jianming.myapplication.Flow1000FlutterActivity"-->
-<!--                android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"-->
-<!--                android:hardwareAccelerated="true"-->
-<!--                android:windowSoftInputMode="adjustResize"-->
-<!--                />-->
-
-<!--        <activity-->
-<!--                android:name="io.flutter.embedding.android.FlutterActivity"-->
-
-<!--                android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"-->
-<!--                android:hardwareAccelerated="true"-->
-<!--                android:windowSoftInputMode="adjustResize"-->
-<!--                />-->
-<!--        <activity-->
-<!--            android:name="io.flutter.embedding.android.FlutterActivity"-->
-<!--            android:theme="@style/AppTheme"-->
-<!--            android:exported="true"-->
-<!--            android:icon="@drawable/delete"-->
-<!--            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"-->
-<!--            android:hardwareAccelerated="true"-->
-<!--            android:windowSoftInputMode="adjustResize"-->
-<!--            >-->
-
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-
-<!--        </activity>-->
-
+                android:name=".myapplication.PicSectionListActivity"
+                android:label="@string/title_activity_pic_section_list_activity_md"/> <!-- <activity -->
+        <!-- android:name="com.example.jianming.myapplication.Flow1000FlutterActivity" -->
+        <!-- android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" -->
+        <!-- android:hardwareAccelerated="true" -->
+        <!-- android:windowSoftInputMode="adjustResize" -->
+        <!-- /> -->
+        <!-- <activity -->
+        <!-- android:name="io.flutter.embedding.android.FlutterActivity" -->
+        <!-- android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" -->
+        <!-- android:hardwareAccelerated="true" -->
+        <!-- android:windowSoftInputMode="adjustResize" -->
+        <!-- /> -->
+        <!-- <activity -->
+        <!-- android:name="io.flutter.embedding.android.FlutterActivity" -->
+        <!-- android:theme="@style/AppTheme" -->
+        <!-- android:exported="true" -->
+        <!-- android:icon="@drawable/delete" -->
+        <!-- android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" -->
+        <!-- android:hardwareAccelerated="true" -->
+        <!-- android:windowSoftInputMode="adjustResize" -->
+        <!-- > -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.flow1000client.file_provider"
-            android:exported="false"
-            android:grantUriPermissions="true">
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="com.example.flow1000client.file_provider"
+                android:exported="false"
+                android:grantUriPermissions="true">
             <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths"/>
         </provider>
     </application>
 
